--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,8 +1,9 @@
-<p>main-page works!</p>
-<div style="text-align:center">
-  <h1>
-    Welcome to here!
-  </h1>
+<div fxLayout="row" fxLayoutAlign="center center">
+  <div fxFlex="15">First item in row</div>
+  <div fxFlex="15" fxLayoutAlign="center">
+    <img class="profile-image" src="assets/vorHecke.jpg"  alt="Profile Image">
+  </div>
+  <div fxFlex="40">Second item in row</div>
+  <div fxFlex="30">Second item in row</div>
 </div>
-
 
