--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,7 +1,7 @@
 <div fxLayout="row" fxLayoutAlign="center center">
   <div fxFlex="15">First item in row</div>
   <div fxFlex="15" fxLayoutAlign="center">
-    <img class="profile-image" src="assets/vorHecke.jpg"  alt="Profile Image">
+    <img class="profile-image" src="assets/blackWhite.jpg"  alt="Profile Image">
   </div>
   <div fxFlex="40">Second item in row</div>
   <div fxFlex="30">Second item in row</div>
