do a bit more on website

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,12 +1,12 @@
 <mat-toolbar>
-  <mat-toolbar-row fxLayout="row">
+  <mat-toolbar-row fxLayout="row" fxLayoutAlign="center center">
     <div fxFlex="15">
 
     </div>
     <div fxFlex="15">
       <a class="homepage" mat-button [routerLink]="'/main-page'">Hannes' Homepage</a>
     </div>
-    <div fxFlex="40">
+    <div fxFlex="40" fxLayout="row" fxLayoutAlign="left center">
       <a mat-button [routerLink]="'/about'"> about </a>
     </div>
     <div fxFlex="30">
