--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,9 +1,35 @@
 <div fxLayout="row" fxLayoutAlign="center center">
   <div fxFlex="15">First item in row</div>
-  <div fxFlex="15" fxLayoutAlign="center">
-    <img class="profile-image" src="assets/blackWhite.jpg"  alt="Profile Image">
+  <div fxFlex="15" fxLayout="column" fxLayoutAlign="center center">
+    <img class="profile-image" src="assets/blackWhite.jpg" alt="Profile Image">
+    <h3>Hannes Stärk</h3>
+    <p>
+      The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
+      A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
+      bred for hunting.
+    </p>
   </div>
   <div fxFlex="40">Second item in row</div>
   <div fxFlex="30">Second item in row</div>
 </div>
 
+
+<!--<div fxLayout="row" fxLayoutAlign="center center">
+  <div fxFlex="15">First item in row</div>
+  <div fxFlex="15" fxLayoutAlign="center">
+    <mat-card class="example-card">
+
+      <img mat-card-image src="assets/blackWhite.jpg" alt="Profile Image">
+      <mat-card-content>
+        <p>
+          The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
+          A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
+          bred for hunting.
+        </p>
+      </mat-card-content>
+    </mat-card>
+    <img class="profile-image" src="assets/blackWhite.jpg" alt="Profile Image">
+  </div>
+  <div fxFlex="40">Second item in row</div>
+  <div fxFlex="30">Second item in row</div>
+</div>-->
