--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -3,6 +3,11 @@
   <div fxFlex="15" fxLayout="column" fxLayoutAlign="center center">
     <img class="profile-image" src="assets/blackWhite.jpg" alt="Profile Image">
     <h3>Hannes Stärk</h3>
+
+<a href="https://github.com/HannesStark" target="_blank">
+  <fa-icon [icon]="github"></fa-icon> Example External Link
+</a>
+    <a ng-href="https://github.com/HannesStark"><fa-icon [icon]="github"></fa-icon> Check my github</a>
     <p>
       The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
       A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
