--- a/src/app/main-page/main-page.component.css
+++ b/src/app/main-page/main-page.component.css
@@ -4,3 +4,29 @@
   padding: 5px;
   border: 1px solid #f2f3f3;
 }
+
+.hover-animation {
+  position: relative;
+  padding: 10px 10px;
+}
+
+
+.hover-animation::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  border-radius: 10px;
+  background-color: forestgreen;
+  visibility: hidden;
+  transform: scaleX(0);
+  transition: all 0.3s ease-in-out 0s;
+}
+
+.hover-animation:hover::before {
+  cursor: pointer;
+  visibility: visible;
+  transform: scaleX(1);
+}
