--- a/src/app/main-page/main-page.component.css
+++ b/src/app/main-page/main-page.component.css
@@ -7,26 +7,14 @@
 
 .hover-animation {
   position: relative;
-  padding: 10px 10px;
+  padding: 5px 10px;
 }
 
-
-.hover-animation::before {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 2px;
-  bottom: 0;
-  left: 0;
-  border-radius: 10px;
-  background-color: forestgreen;
-  visibility: hidden;
-  transform: scaleX(0);
-  transition: all 0.3s ease-in-out 0s;
+.Name{
+  padding: 5px 10px;
 }
 
-.hover-animation:hover::before {
+.hover-animation:hover{
   cursor: pointer;
-  visibility: visible;
-  transform: scaleX(1);
+  text-decoration: underline;
 }
