--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,6 +1,6 @@
-<div fxLayout="row" fxLayoutAlign="center center">
-  <div fxFlex="15"></div>
-  <div fxFlex="15" fxLayout="column" fxLayoutAlign="center left">
+<div fxLayout="row">
+  <div class="flex-spacer"></div>
+  <div fxFlex="15" fxLayout="column" fxLayoutAlign="left left">
     <img class="profile-image" src="assets/squareImage.jpg" alt="Profile Image">
     <h1 class="Name">Hannes Stärk</h1>
 
@@ -21,8 +21,9 @@
       Hannes.Staerk@gmail.com
     </a>
   </div>
-  <div fxFlex="40"></div>
-  <div fxFlex="30"></div>
+  <div>
+    <mat-ca
+  </div>
 </div>
 
 
