--- a/src/app/main-page/main-page.component.css
+++ b/src/app/main-page/main-page.component.css
@@ -1,6 +1,6 @@
 .profile-image {
   border-radius: 50%;
-  max-width: 150px;
+  max-width: 250px;
 }
 
 .hover-animation {
@@ -17,6 +17,8 @@
   text-decoration: underline;
 }
 
-.flex-spacer {
-  flex: 1 1 auto;
+
+.div-margin {
+  margin: 0px 32px;
+  max-width: 700px;
 }
