--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,28 +1,46 @@
-<div fxLayout="row">
-  <div class="flex-spacer"></div>
-  <div fxFlex="15" fxLayout="column" fxLayoutAlign="left left">
-    <img class="profile-image" src="assets/squareImage.jpg" alt="Profile Image">
-    <h1 class="Name">Hannes Stärk</h1>
-
-    <a class="hover-animation" (click)="goToLink('https://github.com/HannesStark')">
-      <fa-icon [icon]="github"></fa-icon>
-      GitHub
-    </a>
-    <a class="hover-animation" (click)="goToLink('https://facebook.com/')">
-      <fa-icon [icon]="linkedin"></fa-icon>
-      LinkedIn
-    </a>
-    <a class="hover-animation" (click)="goToLink('https://facebook.com/')">
-      <fa-icon [icon]="twitter"></fa-icon>
-      Twitter
-    </a>
-    <a class="hover-animation" (click)="goToPage('mailto:hannes.staerk@gmail.com')">
-      <fa-icon [icon]="mail"></fa-icon>
-      Hannes.Staerk@gmail.com
-    </a>
+<div fxLayout="column" fxLayoutAlign="center center" class="leftcol">
+  <div fxLayout="row" fxLayout.lt-md="column" fxLayoutAlign="center center">
+    <div fxFlex="30%" class="leftcol" fxLayoutAlign="end center" fxLayoutAlign.lt-md="center center">
+      <img class="profile-image" src="assets/squareImage.jpg" alt="Profile Image">
+    </div>
+    <div fxFlex="70%">
+      <div class="div-margin" fxLayout="column" fxLayoutAlign.lt-md="center center">
+        <h1 class="Name">Hannes Stärk</h1>
+        <p>contentntenlk alskdnfaölkndsf öalkdsnfö laknsdfölk naösdlkfn ölaksdnföla ksndfö lkansdfölknasdöfl
+          sdflajkndsf ölsakdnfö lkasdnf öalksdnf ölaksdnfö lkasndfö lkansdfö lknasdföl
+          asdflk nasödflknaösdlkfn öaldsknfö aklsndfö akndsöflkansdöfknawecioawnecpoaiwncopin</p>
+        <div fxLayout="row" fxLayout.xs="column">
+          <a class="hover-animation" (click)="goToLink('https://github.com/HannesStark')">
+            <fa-icon [icon]="github"></fa-icon>
+            GitHub
+          </a>
+          <a class="hover-animation" (click)="goToLink('https://facebook.com/')">
+            <fa-icon [icon]="linkedin"></fa-icon>
+            LinkedIn
+          </a>
+          <a class="hover-animation" (click)="goToLink('https://facebook.com/')">
+            <fa-icon [icon]="twitter"></fa-icon>
+            Twitter
+          </a>
+          <a class="hover-animation" (click)="goToPage('mailto:hannes.staerk@gmail.com')">
+            <fa-icon [icon]="mail"></fa-icon>
+            Hannes.Staerk@gmail.com
+          </a>
+        </div>
+      </div>
+    </div>
   </div>
-  <div>
-    <mat-ca
+  <div fxLayout="row" fxLayout.lt-md="column" fxLayoutAlign="center start">
+    <div fxFlex="30%" class="leftcol" fxLayoutAlign="end start" fxLayoutAlign.lt-md="center center">
+      <h1 class="Name">EDUCATION</h1>
+    </div>
+    <div fxFlex="70%">
+      <div class="div-margin" fxLayout="column" fxLayoutAlign.lt-md="center center">
+        <p>contentntenlk alskdnfaölkndsf öalkdsnfö laknsdfölk naösdlkfn ölaksdnföla ksndfö lkansdfölknasdöfl
+          sdflajkndsf ölsakdnfö lkasdnf öalksdnf ölaksdnfö lkasndfö lkansdfö lknasdföl
+          asdflk nasödflknaösdlkfn öaldsknfö aklsndfö akndsöflkansdöfknawecioawnecpoaiwncopin</p>
+      </div>
+    </div>
   </div>
 </div>
 
