--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,5 +1,32 @@
 
+
+//.mat-button {
+//  color: white;;
+//}
+//
+//.icon {
+//  font-size: 27px;
+//  color: white;
+//}
+//
+//.flex-spacer {
+//  flex: 1 1 auto;
+//}
+//
+//mat-toolbar {
+//  height: 56px;
+//  background-color: var(--color-primary);
+//}
+
+
 .mat-button {
+  font-size: 18px;
+  color: var(--color-primary);
+}
+
+.icon {
+  font-size: 30px;
+  color: var(--color-primary);
 }
 
 .flex-spacer {
@@ -7,5 +34,6 @@
 }
 
 mat-toolbar {
+  background-color: transparent;
   height: 56px;
 }
