--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,7 +1,7 @@
-<div fxLayout="column" fxLayoutAlign="center center">
+<div fxLayout="column" fxLayoutAlign="center center" ngClass.lt-md="text-align-center">
   <div fxLayout="row" fxLayout.lt-md="column" fxLayoutAlign="center center">
     <div fxFlex="30" fxLayoutAlign="end center" fxLayoutAlign.lt-md="center center">
-      <img class="profile-image" src="assets/squareImage.jpg" alt="Profile Image">
+      <img class="profile-image" src="assets/Allianz vor Hecke squareUpCloser.jpg" alt="Profile Image">
     </div>
     <div fxFlex="60" ngClass.lt-md="small-margin">
       <div fxFlex.lt-md="" fxFlex="70" fxLayout="column" fxLayoutAlign.lt-md="center center">
@@ -12,36 +12,37 @@
         </div>
         -->
         <div class="item" fxFlex.lt-md="" fxFlex="70" fxLayout="column" fxLayoutAlign.lt-md="center center">
-          <p>
+          <p class="text-align-left">
             Hi there! I am a 21 years old M. Sc. Computer Science student from Germany at TU Munich.
             <br>
-            In my current research, I apply
-            machine learning methods from natural language processing to make predictions about proteins.
+            In my current research, I apply statistical learning methods from natural language processing to make
+            predictions about proteins.
             Besides that,
-            my main interests are learning on graphs and using machine learning in natural sciences or medicine.
+            my main interests are learning on graphs and using statistical learning in natural sciences or medicine.
             <br>
             From the experiences of my dual study program and a from a number of projects, I know that I want to stay in
             research for the rest of my life. Right now, I am deciding where to write my masters thesis and looking for
             a position as a PhD student.
             <br>
-            Feel free to contact me about anything through the tool you prefer:
+            Feel free to contact me about anything in whatever way you prefer:
           </p>
 
           <div fxLayout="row" fxLayout.xs="column">
-            <a class="socials-links link-style" (click)="goToLink('https://github.com/HannesStark')">
-              <fa-icon [icon]="github"></fa-icon>
+            <a class="socials-links link-style" (mousedown)="goToLink($event, 'https://github.com/HannesStark')">
+              <fa-icon class="socials-icon" [icon]="github"></fa-icon>
               GitHub
             </a>
-            <a class="socials-links link-style" (click)="goToLink('https://www.linkedin.com/in/hannes-stark/')">
-              <fa-icon [icon]="linkedin"></fa-icon>
+            <a class="socials-links link-style"
+               (mousedown)="goToLink($event, 'https://www.linkedin.com/in/hannes-stark/')">
+              <fa-icon class="socials-icon" [icon]="linkedin"></fa-icon>
               LinkedIn
             </a>
-            <a class="socials-links link-style" (click)="goToLink('https://twitter.com/HannesStaerk')">
-              <fa-icon [icon]="twitter"></fa-icon>
+            <a class="socials-links link-style" (mousedown)="goToLink($event, 'https://twitter.com/HannesStaerk')">
+              <fa-icon class="socials-icon" [icon]="twitter"></fa-icon>
               Twitter
             </a>
-            <a class="socials-links link-style" (click)="goToPage('mailto:hannes.staerk@gmail.com')">
-              <fa-icon [icon]="mail"></fa-icon>
+            <a class="socials-links link-style" (mousedown)="goToPage($event, 'mailto:hannes.staerk@gmail.com')">
+              <fa-icon class="socials-icon" [icon]="mail"></fa-icon>
               hannes.staerk@gmail.com
             </a>
           </div>
@@ -80,7 +81,8 @@
             <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
               <a class="item-title">M.Sc. Computer Science</a>
               <div fxLayout="row">
-                <h3 class="item-subtitle link-style" (click)="goToLink('https://www.tum.de/en/')">Technical University
+                <h3 class="item-subtitle link-style" (mousedown)="goToLink($event, 'https://www.tum.de/en/')">Technical
+                  University
                   Munich</h3>
               </div>
               <p class="item-date-loc">
@@ -94,8 +96,11 @@
             <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
             <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
               <a class="item-title">B.Sc. Computer Science</a>
-              <h3 class="item-subtitle link-style" (click)="goToLink('https://www.unibw.de/home-en')">Bundeswehr
-                Univsersity Munich</h3>
+              <div fxLayout="row">
+                <h3 class="item-subtitle link-style" (mousedown)="goToLink($event, 'https://www.unibw.de/home-en')">
+                  Bundeswehr
+                  Univsersity Munich</h3>
+              </div>
               <p class="item-date-loc">
                 <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
                 Sept 2017 - Sept 2019
@@ -153,8 +158,11 @@
           <div class="text-area" fxFlex.lt-md="" fxFlex="70" fxLayout="column" fxLayoutAlign.lt-md="center center">
             <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
               <a class="item-title">Teaching Assistant for Introduction to Deep Learning</a>
-              <h3 class="item-subtitle link-style" (click)="goToLink('https://www.tum.de/en/')">Technical University
-                Munich</h3>
+              <div fxLayout="row">
+                <h3 class="item-subtitle link-style" (mousedown)="goToLink($event, 'https://www.tum.de/en/')">Technical
+                  University
+                  Munich</h3>
+              </div>
               <p class="item-date-loc">
                 <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
                 Sept 2020 - March 2021
@@ -166,8 +174,11 @@
             <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
             <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
               <a class="item-title">Mathematics Lecturer</a>
-              <h3 class="item-subtitle link-style" (click)="goToLink('https://www.bibaugsburg.de/')">BIB Augsburg
-                gGmbH</h3>
+              <div fxLayout="row">
+                <h3 class="item-subtitle link-style" (mousedown)="goToLink($event, 'https://www.bibaugsburg.de/')">BIB
+                  Augsburg
+                  gGmbH</h3>
+              </div>
               <p class="item-date-loc">
                 <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
                 since Feb 2020
@@ -179,8 +190,11 @@
             <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
             <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
               <a class="item-title">Student Assistant at Chair of Operations Research</a>
-              <h3 class="item-subtitle link-style" (click)="goToLink('https://www.unibw.de/home-en')">Bundeswehr
-                University Munich</h3>
+              <div fxLayout="row">
+                <h3 class="item-subtitle link-style" (mousedown)="goToLink($event, 'https://www.unibw.de/home-en')">
+                  Bundeswehr
+                  University Munich</h3>
+              </div>
               <p class="item-date-loc">
                 <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
                 Sept 2018 - July 2019
@@ -192,8 +206,11 @@
             <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
             <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
               <a class="item-title">Dual Study Program</a>
-              <h3 class="item-subtitle link-style" (click)="goToLink('https://www.allianzdeutschland.de/')">Allianz
-                Deutschland AG</h3>
+              <div fxLayout="row">
+                <h3 class="item-subtitle link-style"
+                    (mousedown)="goToLink($event, 'https://www.allianzdeutschland.de/')">Allianz
+                  Deutschland AG</h3>
+              </div>
               <p class="item-date-loc">
                 <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
                 Sept 2017 - Sept 2019
@@ -236,7 +253,10 @@
           <div class="text-area" fxFlex.lt-md="" fxFlex="70" fxLayout="column" fxLayoutAlign.lt-md="center center">
             <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
               <a class="item-title">IDP Bioinformatics</a>
-              <h3 (click)="goToLink('https://www.rostlab.org/')" class="item-subtitle link-style">Rostlab at TUM</h3>
+              <div fxLayout="row">
+                <h3 (mousedown)="goToLink($event, 'https://www.rostlab.org/')" class="item-subtitle link-style">Rostlab
+                  at TUM</h3>
+              </div>
               <p class="item-date-loc">
                 <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
                 since Sept 2020
@@ -245,7 +265,7 @@
               </p>
               <p class="item-content">Using machine learning methods from natural language processing to predict where a
                 protein occurs in a cell. Check out the project on <a class="link-style"
-                                                                      (click)="goToLink('https://github.com/HannesStark/protein-localization')">GitHub
+                                                                      (mousedown)="goToLink($event, 'https://github.com/HannesStark/protein-localization')">GitHub
                   <fa-icon [icon]="github"></fa-icon>
                 </a>.
               </p>
@@ -253,8 +273,11 @@
             <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
             <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
               <a class="item-title">Guided Research Computer Vision</a>
-              <h3 (click)="goToLink('https://www.niessnerlab.org/')" class="item-subtitle link-style">Niessnerlab at
-                TUM</h3>
+              <div fxLayout="row">
+                <h3 (mousedown)="goToLink($event, 'https://www.niessnerlab.org/')" class="item-subtitle link-style">
+                  Niessnerlab at
+                  TUM</h3>
+              </div>
               <p class="item-date-loc">
                 <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
                 March 2020 - Sept 2020
@@ -265,12 +288,12 @@
                 human. Besides the desired views, a new and unseen human pose can also be rendered. Check out the
                 project on
                 <a class="link-style"
-                   (click)="goToLink('https://github.com/HannesStark/SMPLNeRF')">GitHub
+                   (mousedown)="goToLink($event, 'https://github.com/HannesStark/SMPLNeRF')">GitHub
                   <fa-icon [icon]="github"></fa-icon>
                 </a>
                 or the
                 <a class="link-style"
-                   (click)="goToLink('https://github.com/HannesStark/SMPLNeRF/blob/master/artefacts/NeRF%20for%20Novel%20View%20and%20Human%20Pose%20Synthesis_Sta%CC%88rk_Reiser_Wolters.pdf')">paper
+                   (mousedown)="goToLink($event, 'https://github.com/HannesStark/SMPLNeRF/blob/master/artefacts/NeRF%20for%20Novel%20View%20and%20Human%20Pose%20Synthesis_Sta%CC%88rk_Reiser_Wolters.pdf')">paper
                   <fa-icon [icon]="paper"></fa-icon>
                 </a>
                 .
@@ -279,8 +302,11 @@
             <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
             <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
               <a class="item-title">Thinktank: Psychological counseling for students - App Coach PTBS</a>
-              <h3 class="item-subtitle link-style" (click)="goToLink('https://www.unibw.de/home-en')">Bundeswehr
-                Univsersity Munich</h3>
+              <div fxLayout="row">
+                <h3 class="item-subtitle link-style" (mousedown)="goToLink($event, 'https://www.unibw.de/home-en')">
+                  Bundeswehr
+                  Univsersity Munich</h3>
+              </div>
               <p class="item-date-loc">
                 <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
                 April 2018 - July 2018
@@ -290,14 +316,18 @@
               <p class="item-content">We developed the concept for the mobile App "Coach PTBS" where we came up with a
                 design and wrote a prototype. Check out the final app
                 <a class="link-style"
-                   (click)="goToLink('https://github.com/HannesStark/SMPLNeRF')">here</a>.
+                   (mousedown)="goToLink($event, 'https://github.com/HannesStark/SMPLNeRF')">here</a>.
               </p>
             </div>
             <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
             <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
               <a class="item-title">Talent base Memmingen: Physics</a>
-              <h3 class="item-subtitle link-style" (click)="goToLink('https://bsg-mm.de/begabungsstuetzpunkt/')">Talent
-                Base Memmingen</h3>
+              <div fxLayout="row">
+                <h3 class="item-subtitle link-style"
+                    (mousedown)="goToLink($event, 'https://bsg-mm.de/begabungsstuetzpunkt/')">
+                  Talent
+                  Base Memmingen</h3>
+              </div>
               <p class="item-date-loc">
                 <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
                 2016 - 2017
@@ -341,8 +371,11 @@
           <div class="text-area" fxFlex.lt-md="" fxFlex="70" fxLayout="column" fxLayoutAlign.lt-md="center center">
             <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
               <a class="item-title">Gymnastics Referee</a>
-              <h3 (click)="goToLink('https://www.dtb.de/')" class="item-subtitle link-style">German Gymnastics
-                Association DTB</h3>
+              <div fxLayout="row">
+                <h3 (mousedown)="goToLink($event, 'https://www.dtb.de/')" class="item-subtitle link-style">German
+                  Gymnastics
+                  Association DTB</h3>
+              </div>
               <p class="item-date-loc">
                 <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
                 since Jan 2019
@@ -353,7 +386,10 @@
             <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
             <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
               <a class="item-title">Gymnastics and Acrobatics Trainer</a>
-              <h3 (click)="goToLink('http://vfl-buchloe.de/')" class="item-subtitle link-style">VfL Buchloe</h3>
+              <div fxLayout="row">
+                <h3 (mousedown)="goToLink($event, 'http://vfl-buchloe.de/')" class="item-subtitle link-style">VfL
+                  Buchloe</h3>
+              </div>
               <p class="item-date-loc">
                 <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
                 since Sept 2015
@@ -363,7 +399,7 @@
               <p class="item-content">I have trained gymnastics groups of all ages from kids to adults. Besides that
                 I am in the acrobatics team
                 <a class="link-style"
-                   (click)="goToLink('https://akrobatikastralbuchloe.com/')">Akrobatik Astral</a>
+                   (mousedown)="goToLink($event, 'https://akrobatikastralbuchloe.com/')">Akrobatik Astral</a>
                 where we choreograph and organize shows for national (and occasionally international) events and
                 competitions.
               </p>
