--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
-<app-header></app-header>
-<div id="main">
-  <router-outlet></router-outlet>
+<div  (window:scroll)="onWindowScroll($event)">
+  <div class="header" [class.elevation]="scrolled">
+    <app-header></app-header>
+  </div>
+  <div id="main">
+    <router-outlet></router-outlet>
+  </div>
+  <app-footer></app-footer>
 </div>
-<app-footer></app-footer>
