--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,3 +6,11 @@
   padding-left: 1em;
   padding-right: 1em;
 }
+
+.header {
+  position: sticky;
+  position: -webkit-sticky; /* For macOS/iOS Safari */
+  top: 0; /* Sets the sticky toolbar to be on top */
+  z-index: 1000; /* Ensure that your app's content doesn't overlap the toolbar */
+  height: auto;
+}
