--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -3,7 +3,7 @@
     <div fxFlex="30" fxLayoutAlign="end center" fxLayoutAlign.lt-md="center center">
       <img class="profile-image" src="assets/Allianz vor Hecke squareUpCloser.jpg" alt="Profile Image">
     </div>
-    <div fxFlex="60" ngClass.lt-md="small-margin">
+    <div fxFlex="60" ngClass.sm="small-margin" ngClass.xs="small-margin--xs">
       <div fxFlex.lt-md="" fxFlex="70" fxLayout="column" fxLayoutAlign.lt-md="center center">
         <h1 class="Name">Hannes Stärk</h1>
         <!--
@@ -20,9 +20,8 @@
             Besides that,
             my main interests are learning on graphs and using statistical learning in natural sciences or medicine.
             <br>
-            From the experiences of my dual study program and a from a number of projects, I know that I want to stay in
-            research for the rest of my life. Right now, I am deciding where to write my masters thesis and looking for
-            a position as a PhD student.
+            From the experiences of my dual study program and through several projects, I found my passion for
+            research and am now working to pursue a career in that area.
             <br>
             Feel free to contact me about anything in whatever way you prefer:
           </p>
@@ -69,10 +68,10 @@
           </div>
         </div>
       </div>
-      <div fxHide.gt-sm ngClass.lt-md="small-margin" class="underline-title" fxLayoutAlign="center center">
+      <div fxHide.gt-sm ngClass.sm="small-margin" ngClass.xs="small-margin--xs" class="underline-title" fxLayoutAlign="center center">
         <h1 class="left-titles">EDUCATION</h1>
       </div>
-      <div ngClass.lt-md="small-margin" fxLayout="row" fxLayout.lt-md="column" fxLayoutAlign.lt-md="center center"
+      <div ngClass.sm="small-margin" ngClass.xs="small-margin--xs" fxLayout="row" fxLayout.lt-md="column" fxLayoutAlign.lt-md="center center"
            fxLayoutAlign="center start">
         <div fxFlex="30" fxLayoutAlign="end start" fxLayoutAlign.lt-md="center center">
         </div>
@@ -88,24 +87,27 @@
               <p class="item-date-loc">
                 <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
                 2019 - 2020
-                <fa-icon class="icon-right-margin--left" [icon]="location"></fa-icon>
-                Munich, Germany
+                <a fxHide.xs>
+                  <fa-icon class="icon-right-margin--left" [icon]="location"></fa-icon>
+                  Munich, Germany
+                </a>
               </p>
-              <p class="item-content">Focus on machine learning and statistics courses.</p>
+              <p class="item-content">I am mostly taking statistics and machine learning courses.</p>
             </div>
             <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
             <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
               <a class="item-title">B.Sc. Computer Science</a>
               <div fxLayout="row">
                 <h3 class="item-subtitle link-style" (mousedown)="goToLink($event, 'https://www.unibw.de/home-en')">
-                  Bundeswehr
-                  Univsersity Munich</h3>
+                  Bundeswehr Univsersity Munich</h3>
               </div>
               <p class="item-date-loc">
                 <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
                 Sept 2017 - Sept 2019
-                <fa-icon class="icon-right-margin--left" [icon]="location"></fa-icon>
-                Munich, Germany
+                <a fxHide.xs>
+                  <fa-icon class="icon-right-margin--left" [icon]="location"></fa-icon>
+                  Munich, Germany
+                </a>
               </p>
               <p class="item-content">The dual study program of the Bundeswehr University in cooperation with Allianz AG
                 combines theoretical training with
@@ -119,8 +121,10 @@
               <p class="item-date-loc">
                 <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
                 2009 - 2017
-                <fa-icon class="icon-right-margin--left" [icon]="location"></fa-icon>
-                Türkheim, Germany
+                <a fxHide.xs>
+                  <fa-icon class="icon-right-margin--left" [icon]="location"></fa-icon>
+                  Türkheim, Germany
+                </a>
               </p>
               <p class="item-content">I participated and helped organizing multiple sports events or shows and was
                 involved in starting the schools chess group.</p>
@@ -147,10 +151,10 @@
           </div>
         </div>
       </div>
-      <div fxHide.gt-sm ngClass.lt-md="small-margin" class="underline-title" fxLayoutAlign="center center">
+      <div fxHide.gt-sm ngClass.sm="small-margin" ngClass.xs="small-margin--xs" class="underline-title" fxLayoutAlign="center center">
         <h1 class="left-titles">PROFESSIONAL</h1>
       </div>
-      <div ngClass.lt-md="small-margin" fxLayout="row" fxLayout.lt-md="column" fxLayoutAlign.lt-md="center center"
+      <div ngClass.sm="small-margin" ngClass.xs="small-margin--xs" fxLayout="row" fxLayout.lt-md="column" fxLayoutAlign.lt-md="center center"
            fxLayoutAlign="center start">
         <div fxFlex="30" fxLayoutAlign="end start" fxLayoutAlign.lt-md="center center">
         </div>
@@ -159,15 +163,16 @@
             <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
               <a class="item-title">Teaching Assistant for Introduction to Deep Learning</a>
               <div fxLayout="row">
-                <h3 class="item-subtitle link-style" (mousedown)="goToLink($event, 'https://www.tum.de/en/')">Technical
-                  University
-                  Munich</h3>
+                <h3 (mousedown)="goToLink($event, 'https://www.niessnerlab.org/')" class="item-subtitle link-style">
+                  Niessnerlab at TUM</h3>
               </div>
               <p class="item-date-loc">
                 <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
                 Sept 2020 - March 2021
-                <fa-icon class="icon-right-margin--left" [icon]="location"></fa-icon>
-                Munich, Germany
+                <a fxHide.xs>
+                  <fa-icon class="icon-right-margin--left" [icon]="location"></fa-icon>
+                  Munich, Germany
+                </a>
               </p>
               <p class="item-content"></p>
             </div>
@@ -182,8 +187,10 @@
               <p class="item-date-loc">
                 <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
                 since Feb 2020
-                <fa-icon class="icon-right-margin--left" [icon]="location"></fa-icon>
-                Augsburg, Germany
+                <a fxHide.xs>
+                  <fa-icon class="icon-right-margin--left" [icon]="location"></fa-icon>
+                  Augsburg, Germany
+                </a>
               </p>
               <p class="item-content">Teaching linear algebra and analysis to vocational students.</p>
             </div>
@@ -198,8 +205,10 @@
               <p class="item-date-loc">
                 <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
                 Sept 2018 - July 2019
-                <fa-icon class="icon-right-margin--left" [icon]="location"></fa-icon>
-                Munich, Germany
+                <a fxHide.xs>
+                  <fa-icon class="icon-right-margin--left" [icon]="location"></fa-icon>
+                  Munich, Germany
+                </a>
               </p>
               <p class="item-content">Time Series Analysis and structure learning in Bayesian Networks.</p>
             </div>
@@ -214,8 +223,10 @@
               <p class="item-date-loc">
                 <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
                 Sept 2017 - Sept 2019
-                <fa-icon class="icon-right-margin--left" [icon]="location"></fa-icon>
-                Munich, Germany
+                <a fxHide.xs>
+                  <fa-icon class="icon-right-margin--left" [icon]="location"></fa-icon>
+                  Munich, Germany
+                </a>
               </p>
               <p class="item-content">I mainly worked in an agile Web-Development Team and at maintaining digital
                 infrastructure. I learned a lot about software engineering, best coding practices and teamwork.
@@ -242,10 +253,10 @@
           </div>
         </div>
       </div>
-      <div fxHide.gt-sm ngClass.lt-md="small-margin" class="underline-title" fxLayoutAlign="center center">
+      <div fxHide.gt-sm ngClass.sm="small-margin" ngClass.xs="small-margin--xs" class="underline-title" fxLayoutAlign="center center">
         <h1 class="left-titles">PROJECTS</h1>
       </div>
-      <div ngClass.lt-md="small-margin" fxLayout="row" fxLayout.lt-md="column" fxLayoutAlign.lt-md="center center"
+      <div ngClass.sm="small-margin" ngClass.xs="small-margin--xs" fxLayout="row" fxLayout.lt-md="column" fxLayoutAlign.lt-md="center center"
            fxLayoutAlign="center start">
         <div fxFlex="30" fxLayoutAlign="end start" fxLayoutAlign.lt-md="center center">
         </div>
@@ -260,12 +271,16 @@
               <p class="item-date-loc">
                 <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
                 since Sept 2020
-                <fa-icon class="icon-right-margin--left" [icon]="location"></fa-icon>
-                Munich, Germany
+                <a fxHide.xs>
+                  <fa-icon class="icon-right-margin--left" [icon]="location"></fa-icon>
+                  Munich, Germany
+                </a>
               </p>
-              <p class="item-content">Using machine learning methods from natural language processing to predict where a
-                protein occurs in a cell. Check out the project on <a class="link-style"
-                                                                      (mousedown)="goToLink($event, 'https://github.com/HannesStark/protein-localization')">GitHub
+              <p class="item-content">I use statistical learning methods from natural language processing to predict
+                where a protein occurs in a cell. My method outperforms the previous state of the art in terms of
+                accuracy and speed. I am currently writing a paper about it. You can already check out all the code on
+                <a class="link-style"
+                   (mousedown)="goToLink($event, 'https://github.com/HannesStark/protein-localization')">GitHub
                   <fa-icon [icon]="github"></fa-icon>
                 </a>.
               </p>
@@ -275,17 +290,20 @@
               <a class="item-title">Guided Research Computer Vision</a>
               <div fxLayout="row">
                 <h3 (mousedown)="goToLink($event, 'https://www.niessnerlab.org/')" class="item-subtitle link-style">
-                  Niessnerlab at
-                  TUM</h3>
+                  Niessnerlab at TUM</h3>
               </div>
               <p class="item-date-loc">
                 <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
                 March 2020 - Sept 2020
-                <fa-icon class="icon-right-margin--left" [icon]="location"></fa-icon>
-                Munich, Germany
+                <a fxHide.xs>
+                  <fa-icon class="icon-right-margin--left" [icon]="location"></fa-icon>
+                  Munich, Germany
+                </a>
               </p>
               <p class="item-content">We used Neural Radiance Fields to render novel views of a scene containing a
-                human. Besides the desired views, a new and unseen human pose can also be rendered. Check out the
+                human. These radiance fields can capture a scene with a low amount of images and then render images from
+                a new unseen viewpoint that did not exist in the original images. Our method added the ability to also
+                change the pose of the human such that you can, for instance, make him walk. Check out the
                 project on
                 <a class="link-style"
                    (mousedown)="goToLink($event, 'https://github.com/HannesStark/SMPLNeRF')">GitHub
@@ -293,10 +311,36 @@
                 </a>
                 or the
                 <a class="link-style"
-                   (mousedown)="goToLink($event, 'https://github.com/HannesStark/SMPLNeRF/blob/master/artefacts/NeRF%20for%20Novel%20View%20and%20Human%20Pose%20Synthesis_Sta%CC%88rk_Reiser_Wolters.pdf')">paper
+                   (mousedown)="pdf($event, '/assets/NeRF for Novel View and Human Pose Synthesis.pdf')">paper
                   <fa-icon [icon]="paper"></fa-icon>
                 </a>
                 .
+              </p>
+            </div>
+            <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
+            <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
+              <a class="item-title">Survey Paper on Transformers</a>
+              <div fxLayout="row">
+                <h3 (mousedown)="goToLink($event, 'https://www.in.tum.de/daml/startseite/')"
+                    class="item-subtitle link-style">
+                  Data Analytics and Machine Learning Group at TUM</h3>
+              </div>
+              <p class="item-date-loc">
+                <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
+                April 2020 - Sept 2020
+                <a fxHide.xs>
+                  <fa-icon class="icon-right-margin--left" [icon]="location"></fa-icon>
+                  Munich, Germany
+                </a>
+              </p>
+              <p class="item-content">Transformers are a machine learning method that is the state of the art for many
+                natural language processing tasks but are currently also finding a lot of success in other fields.
+                Check out the
+                <a class="link-style"
+                   (mousedown)="pdf($event, '/assets/transformer_survey.pdf')">paper
+                  <fa-icon [icon]="paper"></fa-icon>
+                </a>
+                that explains the architecture, its properties and the main applications in detail.
               </p>
             </div>
             <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
@@ -310,13 +354,17 @@
               <p class="item-date-loc">
                 <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
                 April 2018 - July 2018
-                <fa-icon class="icon-right-margin--left" [icon]="location"></fa-icon>
-                Munich, Germany
+                <a fxHide.xs>
+                  <fa-icon class="icon-right-margin--left" [icon]="location"></fa-icon>
+                  Munich, Germany
+                </a>
               </p>
               <p class="item-content">We developed the concept for the mobile App "Coach PTBS" where we came up with a
-                design and wrote a prototype. Check out the final app
+                design and wrote a prototype. The app strives to help and inform about forms of psychological distress
+                and is an always accessible tool to easily contact help.
+                Check out the final app
                 <a class="link-style"
-                   (mousedown)="goToLink($event, 'https://github.com/HannesStark/SMPLNeRF')">here</a>.
+                   (mousedown)="goToLink($event, 'https://www.unibw.de/campusleben/beratungsangebote/coachptbs/view')">here</a>.
               </p>
             </div>
             <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
@@ -331,11 +379,13 @@
               <p class="item-date-loc">
                 <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
                 2016 - 2017
-                <fa-icon class="icon-right-margin--left" [icon]="location"></fa-icon>
-                Memmingen, Germany
+                <a fxHide.xs>
+                  <fa-icon class="icon-right-margin--left" [icon]="location"></fa-icon>
+                  Memmingen, Germany
+                </a>
               </p>
               <p class="item-content">
-                We built a nitorgen laser running on the ionized nitrogen of the air.
+                We built a laser by using high voltage to ionize the nitrogen in a thin strip of air.
               </p>
             </div>
           </div>
@@ -360,10 +410,10 @@
           </div>
         </div>
       </div>
-      <div fxHide.gt-sm ngClass.lt-md="small-margin" class="underline-title" fxLayoutAlign="center center">
+      <div fxHide.gt-sm ngClass.sm="small-margin" ngClass.xs="small-margin--xs" class="underline-title" fxLayoutAlign="center center">
         <h1 class="left-titles">ACTIVITIES</h1>
       </div>
-      <div ngClass.lt-md="small-margin" fxLayout="row" fxLayout.lt-md="column" fxLayoutAlign.lt-md="center center"
+      <div ngClass.sm="small-margin" ngClass.xs="small-margin--xs" fxLayout="row" fxLayout.lt-md="column" fxLayoutAlign.lt-md="center center"
            fxLayoutAlign="center start">
         <div fxFlex="30" fxLayoutAlign="end start" fxLayoutAlign.lt-md="center center">
         </div>
@@ -379,8 +429,10 @@
               <p class="item-date-loc">
                 <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
                 since Jan 2019
-                <fa-icon class="icon-right-margin--left" [icon]="location"></fa-icon>
-                Augsburg, Germany
+                <a fxHide.xs>
+                  <fa-icon class="icon-right-margin--left" [icon]="location"></fa-icon>
+                  Augsburg, Germany
+                </a>
               </p>
             </div>
             <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
@@ -393,8 +445,10 @@
               <p class="item-date-loc">
                 <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
                 since Sept 2015
-                <fa-icon class="icon-right-margin--left" [icon]="location"></fa-icon>
-                Buchloe, Germany
+                <a fxHide.xs>
+                  <fa-icon class="icon-right-margin--left" [icon]="location"></fa-icon>
+                  Buchloe, Germany
+                </a>
               </p>
               <p class="item-content">I have trained gymnastics groups of all ages from kids to adults. Besides that
                 I am in the acrobatics team
